<resources>
    <string name="app_name">SORMAS</string>
    <string name="main_menu_user_sub_header"></string>
    <string name="action_repull_data">Re-synchronize data</string>
    <string name="action_reload">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_dimiss">Dismiss</string>
    <string name="action_close">Close</string>
    <string name="action_move">Move</string>
    <string name="action_done">Done</string>
    <string name="action_add_list">+ Add new entry</string>
    <string name="action_search">Update search</string>
    <string name="action_select_person">Select</string>
    <string name="action_create">Create</string>
    <string name="action_clearAll">Clear all</string>
    <string name="action_setEmptyToNo">Set cleared to No</string>
    <string name="action_createCaseFromContact">Create a case for this contact person</string>
    <string name="action_send">Send</string>
    <string name="action_pick_gps">Pick GPS coordinates</string>
    <string name="action_submit">Submit</string>
    <string name="action_loadMore">Load more</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_close_app">Close SORMAS</string>
    <string name="action_turn_on_gps">Turn On GPS</string>
    <string name="action_allow_gps_access">Allow GPS Access</string>
    <string name="action_show_last_week">Last Week</string>
    <string name="action_show_this_week">This Week</string>
    <string name="action_add_missing_case">Add Missing Case</string>
    <string name="action_confirm_report">Confirm Report</string>
    <string name="action_open_reports">Open Reports</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_logout_anyway">Logout anyway</string>
    <string name="field_yes_no_yes">Yes</string>
    <string name="field_yes_no_no">No</string>
    <string name="field_yes_no_unk">Unk</string>
    <string name="headline_sormas">SORMAS</string>
    <string name="headline_date_picker">Select a date</string>
    <string name="headline_case">Case</string>
    <string name="headline_case_data">Case data</string>
    <string name="headline_case_medical_information">Additional medical information</string>
    <string name="headline_symptoms_data">Clinical Signs and Symptoms</string>
    <string name="headline_symptoms_illLocation">Location Where Person Became Symptomatic</string>
    <string name="headline_symptoms_stay_period">Time Period of Stay</string>
    <string name="headline_person_information">Person</string>
    <string name="headline_task">Tasks</string>
    <string name="headline_task_data">Task information</string>
    <string name="headline_form_cp_occupation_details">Occupation details</string>
    <string name="headline_form_cp_occupation_details_business">Type of business</string>
    <string name="headline_form_cp_occupation_details_transport">Type of transport</string>
    <string name="headline_form_cp_occupation_details_other">Please specify occupation</string>
    <string name="headline_form_cp_occupation_details_healthcare">Position</string>
    <string name="headline_permanent_residence">Permanent residence of person</string>
    <string name="headline_occupation">Occupation</string>
    <string name="headline_location">Location</string>
    <string name="headline_move_case">Move case</string>
    <string name="headline_responsible">Responsible users</string>
    <string name="headline_new_case">Create new case</string>
    <string name="headline_sample">Sample</string>
    <string name="headline_sample_data">Sample data</string>
    <string name="headline_new_sample">Create new sample</string>
    <string name="headline_sample_test">Recent test</string>
    <string name="headline_sample_received">Received</string>
    <string name="headline_task_notification">Check sormas task</string>
    <string name="headline_case_notification">Case disease has changed</string>
    <string name="headline_new_contact">Create new contact</string>
    <string name="headline_contact">Contact</string>
    <string name="headline_source_case">Source case</string>
    <string name="headline_associated_case">Open case of this contact person</string>
    <string name="headline_pick_person">Pick or create a person</string>
    <string name="headline_visit">Follow-up visit</string>
    <string name="headline_event">Event</string>
    <string name="headline_eventLocation">Event location</string>
    <string name="headline_event_information">Event information</string>
    <string name="headline_event_sourceOfInformation">Source of information</string>
    <string name="headline_new_event">New event</string>
    <string name="headline_eventParticipant">Persons involved</string>
    <string name="headline_new_eventParticipant">New person</string>
    <string name="headline_hospitalization_recent">Most recent hospitalization</string>
    <string name="headline_epidata">Epidemiological data</string>
    <string name="headline_epidata_animalcontacts">Animal contacts</string>
    <string name="headline_epidata_environmentalexposure">Environmental exposure</string>
    <string name="headline_previousHospitalization">Previous hospitalization</string>
    <string name="headline_burial">Burial</string>
    <string name="headline_gathering">Social event</string>
    <string name="headline_travel">Travel</string>
    <string name="headline_user_report">Report a problem</string>
    <string name="headline_sync_log">Synchronization Conflicts</string>
    <string name="headline_event_synchronization">Event Synchronization</string>
    <string name="headline_sample_synchronization">Sample Synchronization</string>
    <string name="headline_task_synchronization">Task Synchronization</string>
    <string name="headline_visit_synchronization">Visit Synchronization</string>
    <string name="headline_warning">Warning</string>
    <string name="headline_logout">Logging Out</string>
    <string name="caption_weekly_report_year">Year</string>
    <string name="caption_weekly_report_week">Epi Week</string>
    <string name="caption_weekly_report_start">Start</string>
    <string name="caption_weekly_report_end">End</string>
    <string name="caption_weekly_report_report_date">Report date</string>
    <string name="caption_unknown">Unknown</string>
    <string name="case_move">Move case to another health facility \u279D</string>
    <string name="form_p_date_of_birth">Date of birth (year / month / day)</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="symptoms_infoText">Please tick an answer for ALL symptoms indicating if they occurred during this illness between symptom onset and case detection:</string>
    <string name="epiData_infoText">Please indicate if any of the following is relevant for the patient during the incubation period or illness.</string>
    <string name="animalContacts_infoText">Please indicate an answer regarding ALL animals (live or dead) the person had direct exposure to (e.g. hunt, touch, eat) during the incubation period.</string>
    <string name="infoText_move_case_discard_changes">Moving the case will discard any unsaved changes. Do you want to continue?</string>
    <string name="label_enter_location">Enter location</string>
    <string name="label_person_ill">Person ill / </string>
    <string name="label_body_touched">Body touched</string>
    <string name="label_body_not_touched">Body not touched</string>
    <string name="label_pick_gps">No GPS coordinates picked</string>
    <string name="label_lesions_locations">Localisation of the lesions</string>
    <string name="isolated">isolated</string>
    <string name="hint_user_report">Please briefly describe the problem you have experienced. Don\'t enter any personal or otherwise sensitive data!</string>
    <string name="hint_login">Please log in to your account.</string>
    <string name="hint_no_sync_errors">There are no synchronization conflicts to display.</string>
    <string name="hint_logout">Logging out of SORMAS...</string>
    <string name="hint_select_entry">Select entry</string>
    <string name="hint_contact_synchronization">Contacts are being synchronized...</string>
    <string name="hint_event_synchronization">Events are being synchronized...</string>
    <string name="hint_sample_synchronization">Samples are being synchronized...</string>
    <string name="hint_task_synchronization">Tasks are being synchronized...</string>
    <string name="hint_visit_synchronization">Visits are being synchronized...</string>
    <string name="hint_weekly_report_info">In EPID-week %1$s from %2$s to %3$s, you have reported the following disease cases:</string>
    <string name="hint_no_weekly_report">You have not yet confirmed the report for last week.</string>
    <string name="hint_weekly_report_no_data">No data available for this epi week.</string>
    <string name="hint_report_not_yet_submitted">Not yet submitted</string>
    <string name="hint_report_not_submitted">No report submitted</string>
    <string name="snackbar_save_success">%1$s saved successfully.</string>
    <string name="snackbar_create_success">%1$s created successfully.</string>
    <string name="snackbar_save_error">%1$s could not be saved because of an internal error.</string>
    <string name="snackbar_create_error">%1$s could not be created because of an internal error.</string>
    <string name="snackbar_sync_error_saved">%1$s has been saved, but could not be synchronized.</string>
    <string name="snackbar_sync_error_created">%1$s has been created, but could not be synchronized.</string>
    <string name="snackbar_empty_username">Please enter a username.</string>
    <string name="snackbar_empty_password">Please enter a password.</string>
    <string name="snackbar_sample_datetime">Please specify the time of sampling.</string>
    <string name="snackbar_sample_material">Please specify the sample material.</string>
    <string name="snackbar_sample_material_text">Please further specify the sample material.</string>
    <string name="snackbar_sample_lab">Please specify the laboratory.</string>
    <string name="snackbar_sample_shipment_status">Please specify the shipment status.</string>
    <string name="snackbar_sample_shipment_date">Please specify the shipment date.</string>
    <string name="snackbar_case_disease">Please specify the case disease.</string>
    <string name="snackbar_case_firstName">Please enter the first name of the case person.</string>
    <string name="snackbar_case_lastName">Please enter the last name of the case person.</string>
    <string name="snackbar_case_facility">Please enter the health facility.</string>
    <string name="sormas_logo_desc">SORMAS Logo</string>
    <string name="username_label_title">User Name</string>
    <string name="password_label_title">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_tagline">Sign into SORMAS to continue the journey of saving lives.</string>
    <string name="action_login">Sign In</string>
    <string name="login_change_settings"><u>Change Settings</u></string>
    <string name="userNameHint">Your User Name</string>
    <string name="passwordHint">Your Password</string>
    <string name="login_heading_1">Surveillance Outbreak</string>
    <string name="login_heading_2">Response Management &amp; Analysis System</string>
    <string name="service_1">Disease Prevention</string>
    <string name="service_2">Disease Detection</string>
    <string name="service_3">Outbreak Response</string>
    <string name="action_change_PIN">Change PIN</string>
    <string name="action_drop_data">Drop data</string>
    <string name="action_open_syncLog">Synchronization conflicts</string>
    <string name="action_logout">Logout</string>
</resources>