<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/fragment_settings_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <org.technologyboard.android.sormas.component.TextControl
                android:id="@+id/txtSettingsServerUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textControlMarginBottom"
                app:hint="Server Address"
                app:description="This is the URL to the restful API"
                app:labelCaption="Server Address"/>

            <org.technologyboard.android.sormas.component.ButtonControl
                android:id="@+id/btnSettingsChangePIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonControlMarginBottom"
                android:text="@string/action_change_PIN"
                app:button_type="secondary"
                android:onClick="changePIN"/>

            <org.technologyboard.android.sormas.component.ButtonControl
                android:id="@+id/btnSettingsDropData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonControlMarginBottom"
                app:button_type="secondary"
                android:text="@string/action_drop_data"/>

            <org.technologyboard.android.sormas.component.ButtonControl
                android:id="@+id/btnSettingsSyncLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonControlMarginBottom"
                android:text="@string/action_open_syncLog"
                app:button_type="secondary"
                android:onClick="openSyncLog"/>

            <org.technologyboard.android.sormas.component.ButtonControl
                android:id="@+id/btnSettingsLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonControlMarginBottom"
                android:text="@string/action_logout"
                app:button_type="secondary"
                android:onClick="logout"/>

            <ProgressBar
                android:id="@+id/config_progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>


    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Settings"/>-->
</layout>